tests/negative/test_data_memb_undef.orb
data Foo;

data Bar {
    x:Foo
};

fnc main () () {};